# Radxa_detect_human

./: .gitignore  README.md
orangepi/: detect_webview.service  server.py
radxa/: CMakeLists.txt  detect.cpp  detect.h  detect_human.service  grab.py  main.c  run.sh  selftest.sh
